# events

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  t2-domain-model.md  t3-source-framework.md  t4-storage-layer.md  t5-web-ui.md  tasks.md
src/events/: __init__.py  main.py
src/events/domain/: __init__.py  identity.py  keys.py  models.py  urls.py  weeks.py
src/events/sources/: __init__.py  framework.py  jsonld.py  models.py
src/events/storage/: __init__.py  repository.py  sqlite.py
src/events/templates/: weekly_page.html
src/events/web/: __init__.py  views.py
tests/: test_app_bootstrap.py  test_domain_keys.py  test_domain_models.py  test_domain_scope.py  test_sources_contract.py  test_sources_jsonld.py  test_storage_repository.py  test_web_weekly_page.py
