[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "events"
version = "0.1.0"
description = "Greater Boston weekly events aggregator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.135.2,<1.0",
  "jinja2>=3.1.6,<4.0",
  "uvicorn>=0.42.0,<1.0",
  "sqlalchemy>=2.0.48,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2,<10.0",
  "ruff>=0.15.8,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
events = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
  # Formatter-controlled; keep the 80-col target without noisy failures.
  "E501",
]

[tool.ruff.format]
line-ending = "lf"
